--- a/alv15842/DBProyecto1/presentacion.html
+++ b/alv15842/DBProyecto1/presentacion.html
@@ -1241,7 +1241,7 @@ ORDER BY Distancia DESC;</code></pre>
 <div id="analisis-de-resultados" class="section level1">
 <h1>Analisis de resultados</h1>
 <p>Para realizar la comparación entre las compañías aéreas en cada una de las Consultas se realizó una <a href="https://drive.google.com/file/d/1mhX_aI6NyXxuO5ArnBBBoHL4gFd8DJdo/view?usp=sharing">Tabla de Comparación</a>, en la cual se colocó cada aerolínea según su resultado. De esta manera se pudo observar su comportamiento, respecto a la consistencia de sus resultados comparadas contra las otras líneas aéreas.</p>
-<p>Debido a que, en la Tabla de Comparación se puede notar que <em>Southwest Airlines Co.</em> siempre se encuentra en el en los puestos más altos y que en las categorías más importantes está en los primeros lugares, se recomienda realizar la inversión en esta compañía. Por lo que la respuesta a la pregunta de investigación <strong>¿qué aerolínea se desempeñó mejor durante el 2017-2018?</strong> es <em>Southwest Airlines Co.</em>.</p>
+<p>Debido a que, en la Tabla de Comparación se puede notar que <em>Delta Air Lines Inc.</em> siempre se encuentra en el en los puestos más altos y que en las categorías más importantes está en los primeros lugares, se recomienda realizar la inversión en esta compañía. Por lo que la respuesta a la pregunta de investigación <strong>¿qué aerolínea se desempeñó mejor durante el 2017-2018?</strong> es <em>Delta Air Lines Inc.</em>.</p>
 </div>
 
 
